--- a/EmailManager/项目大纲.md
+++ b/EmailManager/项目大纲.md
@@ -1,56 +1,117 @@
 ### **项目大纲：邮件管理系统**
 
-### **项目概述**
+#### 一、项目概述
 
-- 系统功能：
-    - 用户模块：
-        - 邮件收发：
-            - 撰写邮件：新建邮件、添加收件人、抄送人、密送人、设置邮件主题、编辑邮件内容、添加附件。
-            - 发送邮件：将撰写好的邮件发送给指定收件人。
-            - 接收邮件：在收件箱中接收新邮件、查看邮件列表、查看邮件详情。
-            - 草稿箱：保存未完成的邮件，以便后续编辑和发送。
-            - 已发送：查看所有已成功发送的邮件。
-            - 垃圾邮件：管理和查看被识别为垃圾邮件的内容。
-        - 邮件管理：
-            - 标记已读/未读：将邮件状态设为已读或未读。
-            - 星标：对重要邮件进行标记。
-            - 归档：将邮件移动到归档文件夹。
-            - 删除：将邮件移动到废纸篓。
-            - 搜索：根据发件人、收件人、主题、邮件内容关键词进行邮件查找。
-        - 通讯录管理：
-            - 新增联系人：添加新的联系人信息，包括姓名、邮箱地址、电话号码、生日。
-            - 编辑联系人：修改现有联系人的信息。
-            - 删除联系人：从通讯录中移除联系人。
-            - 查询联系人：根据姓名或邮箱地址查找联系人。
-        - 个人信息管理：
-            - 修改个人资料：更新用户姓名、头像、联系方式等个人信息。
-            - 修改密码：更改用户登录密码。
-        - 垃圾邮件拦截规则：
-            - 添加个人拦截规则：用户可以自定义添加基于发件人、主题关键词的拦截规则。
-            - 查看和管理个人拦截规则：用户可以查看、编辑或删除自己设定的拦截规则。
-        - 日历功能：
-            - 查看联系人生日：在日历中显示通讯录中联系人的生日提醒。
-            - 查看节假日：显示常见的节假日信息（例如，可以集成国家法定节假日数据）。
-    - 管理员模块：
-        - 用户管理：
-            - 新增用户：创建新的用户账户。
-            - 编辑用户：修改现有用户的基本信息、权限状态。
-            - 删除用户：注销或删除用户账户。
-            - 查询用户：根据用户名、邮箱等信息查找用户。
-        - 系统配置：
-            - 管理系统公告：发布、编辑和删除系统公告。
-            - 管理服务条款：编辑和更新系统的服务使用条款。
-        - 垃圾邮件拦截规则：
-            - 添加全局拦截规则：管理员可以添加影响所有用户的垃圾邮件拦截规则（例如，基于全局黑名单域名或IP）。
-            - 查看和管理全局拦截规则：管理员可以查看、编辑或删除系统级别的拦截规则。
+本系统为一套基于 SSM（Spring MVC + Spring + MyBatis）后端与 Vue3 + Element Plus 前端的邮件管理平台，支持普通用户与管理员两类角色，具备邮件收发、通讯录、日历、公告、服务条款、垃圾邮件拦截等完整功能。
 
-### **技术栈**
+---
 
-- 后端：SSM (Spring MVC + Spring + MyBatis)
-- 前端：VUE3
+#### 二、系统功能详解
 
-### **开发工具**
+##### 1. 用户模块（普通用户）
+
+- **邮件收发与管理**
+  - 写邮件
+    - 页面：写邮件页（ComposeView.vue）
+    - 功能：新建邮件、添加收件人、主题、内容、附件上传
+    - 交互：支持保存为草稿、直接发送
+  - 收件箱
+    - 页面：InboxView.vue
+    - 功能：查看所有收到的邮件，支持未读/已读切换、星标、归档、删除、批量操作
+    - 交互：点击可查看详情，支持标记、归档、移至垃圾箱
+  - 草稿箱、已发送、归档箱、垃圾箱
+    - 页面：DraftsView.vue、SentView.vue、ArchivedView.vue、TrashView.vue
+    - 功能：分别管理不同状态的邮件，支持还原、彻底删除、编辑草稿等
+  - 邮件详情
+    - 页面：EmailDetailView.vue
+    - 功能：查看邮件正文、附件下载、回复/转发
+  - 邮件搜索
+    - 页面：EmailSearchView.vue
+    - 功能：按发件人、收件人、主题、内容关键词等多条件模糊搜索
+- **通讯录管理**
+  - 页面：ContactView.vue
+  - 功能：新增、编辑、删除联系人，支持姓名、邮箱、电话、生日等字段
+  - 交互：支持搜索、生日提醒与日历集成
+- **个人信息管理**
+  - 页面：UserProfileView.vue
+  - 功能：修改个人资料（姓名、头像、联系方式）、修改密码
+  - 交互：支持头像上传、表单校验
+- **垃圾邮件拦截规则（个人）**
+  - 页面：SpamRuleView.vue
+  - 功能：添加、编辑、删除、启用/禁用个人拦截规则（基于发件人、关键词等）
+  - 交互：规则即时生效，支持多条规则管理
+- **日历与提醒**
+  - 页面：CalendarView.vue
+  - 功能：显示联系人生日、系统节假日，支持月份切换
+  - 交互：可点击联系人直接写祝福邮件
+- **系统公告**
+  - 页面：AnnouncementView.vue
+  - 功能：查看系统公告列表与详情，支持公告内容富文本展示
+- **服务条款**
+  - 页面：ServiceTermsView.vue
+  - 功能：只读展示当前生效的服务条款，内容与登录页一致
+
+---
+
+##### 2. 管理员模块
+
+- **用户管理**
+  - 页面：admin/UserManagementView.vue
+  - 功能：新增、编辑、删除、禁用/启用用户，支持按用户名、邮箱、姓名搜索
+  - 交互：批量操作、权限控制
+- **系统公告管理**
+  - 页面：admin/AdminAnnouncementView.vue
+  - 功能：发布、编辑、删除公告，支持富文本编辑、定时发布
+- **服务条款管理**
+  - 页面：admin/AdminServiceTermsView.vue
+  - 功能：编辑、发布、切换服务条款版本，支持历史版本管理
+- **节假日管理**
+  - 页面：admin/AdminHolidayView.vue
+  - 功能：新增、编辑、删除节假日，支持按年份管理
+- **全局垃圾邮件拦截规则管理**
+  - 页面：admin/AdminGlobalSpamRuleView.vue
+  - 功能：添加、编辑、删除、启用/禁用全局拦截规则，影响所有用户
+- **管理员仪表盘**
+  - 页面：AdminDashboard.vue
+  - 功能：展示系统统计数据（用户数、邮件数、公告数、全局拦截规则数、节假日数），并提供各管理功能的快捷入口
+  - 交互：卡片式布局，数据自动刷新
+
+---
+
+#### 三、系统架构与技术栈
+
+- **后端**
+  - 框架：Spring MVC + Spring + MyBatis
+  - 功能分层：Controller、Service、Mapper、Entity、DTO、VO
+  - 安全：Token拦截、权限校验、全局异常处理
+  - 数据库：MySQL，表结构涵盖用户、邮件、公告、节假日、拦截规则等
+- **前端**
+  - 框架：Vue3 + Element Plus
+  - 状态管理：Pinia
+  - 路由：vue-router，支持权限路由与页面守卫
+  - 样式：CSS3 + Element Plus 主题
+  - 交互：响应式布局，支持移动端适配
+- **接口设计**
+  - RESTful API，前后端分离
+  - 统一返回格式，支持分页、条件查询
+
+---
+
+#### 四、开发与部署工具
 
 - IDE：IntelliJ IDEA
 - 数据库管理工具：Navicat
 - 代码编辑器：Cursor
+- 包管理：pnpm
+- 构建工具：Vite
+- 版本管理：Git
+
+---
+
+#### 五、页面与交互总览
+
+- 登录/注册页
+- 首页（用户/管理员仪表盘）
+- 邮件相关各功能页
+- 通讯录、日历、公告、服务条款等功能页
+- 管理端各管理功能页
